--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rushbuild": "next build && next start"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
